--- a/frontend/static/css/style.css
+++ b/frontend/static/css/style.css
@@ -1,6 +1,6 @@
 body {
-    font-family: Arial, sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -16,6 +16,16 @@ body {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     width: 800px; 
     height: 1100px;
+}
+
+#credits {
+    font-size: 14px;
+    text-align: center;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 800px;
 }
 
 button {
